Clausen: Added introduction

--- a/404.html
+++ b/404.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-  </head>
-  <body>
-    <h1>404 Not Found</h1>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><body><meta charset="UTF-8"><h1>404 Not Found</h1></body></head></html>
